fix: fixed wrap stuff

--- a/src/components/Board/Board.scss
+++ b/src/components/Board/Board.scss
@@ -10,4 +10,5 @@
 .Board_PlayerContainer {
     height: 50%;
     width: 50%;
+    flex:1 0 auto;
 }
